<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_addProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        android:text="@string/tv_addProduct" />

    <Button
        android:id="@+id/btn_editProductSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="@+id/tv_addProduct"
        android:layout_margin="15dp"
        android:layout_toRightOf="@+id/tv_addProduct"
        android:backgroundTint="@color/ic_launcher_staples_canada_background"
        android:text="@string/btn_addProductSave"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_backToMainFromEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="@+id/btn_editProductSave"
        android:layout_margin="15dp"
        android:layout_toRightOf="@+id/btn_editProductSave"
        android:backgroundTint="@color/ic_launcher_staples_canada_background"
        android:text="@string/btn_backToMainFromAdd"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_addProduct"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/num_editItemNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/num_addItemNumber"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/pt_editItemName"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pt_addItemName"
                android:inputType="textMultiLine"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/mt_editTypicalLocation"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/mt_addTypicalLocation"
                android:inputType="textMultiLine"
                android:textColorHint="#8D6E63" />

            <EditText
                android:id="@+id/mt_editGeneralNotes"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/mt_addGeneralNotes"
                android:inputType="textMultiLine"
                android:textColorHint="#8D6E63" />

            <EditText
                android:id="@+id/pt_editWebsiteLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pt_addWebsiteLink"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63" />

            <EditText
                android:id="@+id/pt_editReviewVideoLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pt_addReviewVideoLink"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>