<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstrainLayout_editOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_addProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/tv_editProduct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_backToMainFromEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/ic_launcher_staples_canada_background"
            android:text="@string/btn_backToMainFromEdit"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_editProductSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp"
            android:backgroundTint="@color/ic_launcher_staples_canada_background"
            android:text="@string/btn_editProductSave"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/btn_editProductDelete"
            app:layout_constraintTop_toBottomOf="@+id/stch_editProductEdit" />

        <Button
            android:id="@+id/btn_editProductDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/ic_launcher_staples_canada_background"
            android:text="@string/btn_editProductDelete"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_addProduct" />

        <Switch
            android:id="@+id/stch_editProductEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="43dp"
            android:minHeight="48dp"
            android:text="@string/stch_editProductEdit"
            app:layout_constraintEnd_toStartOf="@+id/btn_backToMainFromEdit"
            app:layout_constraintStart_toEndOf="@+id/tv_addProduct"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/num_editItemNumber"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="4dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/num_addItemNumber"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_backToMainFromEdit" />

        <WebView
            android:id="@+id/wv_editWebsiteLink"
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:layout_marginVertical="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_editProductDelete"
            tools:ignore="WebViewLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/ScrollView_editProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConstrainLayout_editOptions"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/pt_editItemName"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pt_addItemName"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/mt_editTypicalLocation"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/mt_addTypicalLocation"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/mt_editGeneralNotes"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/mt_addGeneralNotes"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/pt_editWebsiteLink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pt_addWebsiteLink"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/pt_editReviewVideoLink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pt_addReviewVideoLink"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />



            <RelativeLayout
                android:id="@+id/RelativeLayout_editExternalLinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wv_editWebsiteLink"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/btn_editVideoReviewLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/ic_launcher_staples_canada_background"
                    android:text="@string/btn_editVideoReviewLink"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_editWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/btn_editVideoReviewLink"
                    android:backgroundTint="@color/ic_launcher_staples_canada_background"
                    android:text="@string/btn_editWebsite"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </LinearLayout>



    </ScrollView>



</RelativeLayout>