<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_binAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="19dp"
        android:text="@string/btn_binAdd"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_binTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_binBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="78dp"
        android:text="@string/btn_binBackToMain"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tv_binTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_binTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginBottom="25dp"
        android:text="@string/tv_binTitle"
        app:layout_constraintBottom_toTopOf="@+id/RadioGroup_binStock"
        app:layout_constraintStart_toEndOf="@+id/btn_binBackToMain" />

    <RadioGroup
        android:id="@+id/RadioGroup_binStock"
        android:layout_width="375dp"
        android:layout_height="58dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_binAdd"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/rdbtn_binAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbtn_binAll" />

        <RadioButton
            android:id="@+id/rdbtn_binStockIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbtn_binStockIn" />

        <RadioButton
            android:id="@+id/rdbtn_btnStockOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rdbtn_btnStockOut" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView_Bin"
        android:layout_width="410dp"
        android:layout_height="715dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup_binStock" />

</androidx.constraintlayout.widget.ConstraintLayout>